//
// Copyright 2018 Peter Vrenken.
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Space Grpc service definition.
service SpaceGrpcService  
{
	rpc GetSingle (SpaceSingleRequest) returns (SpaceSingleResponse) {}
	rpc GetMultiple (SpaceMultipleRequest) returns (stream SpaceMultipleResponse) {}
	rpc Post (SpacePostSingleRequest) returns (SpaceSingleResponse) {}
	rpc Put (SpaceSingleRequest) returns (SpaceSingleResponse) {}
	rpc Delete (SpaceSingleRequest) returns (SpaceSingleResponse) {}
}


message SpaceSingleRequest
{
	oneof Selection
	{
		Guid Id = 2;
		string Name = 3;
		Space Space = 4;
	}
}

message SpacePostSingleRequest
{
	Space Space = 2;
}

message SpaceMultipleRequest
{
}

message SpaceSingleResponse
{
	Space Space = 1;
}

message SpaceMultipleResponse
{
	Space Space = 1;
}
